link to gh-pages

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://examplesite.com/"
+baseURL: "https://intervalrain.github.io/rainhu.github.io/"
 title: "Rain's Blog"
 paginate: 5
 theme: hugo-PaperMod
