--- a/config.yml
+++ b/config.yml
@@ -32,7 +32,7 @@ params:
   # ShowCodeCopyButtons: false
   # disableSpecial1stPost: false
   # disableScrollToTop: false
-  # comments: false
+  comments: true
   # hidemeta: false
   # hideSummary: false
   # showtoc: false
