--- a/config.yml
+++ b/config.yml
@@ -71,8 +71,10 @@ params:
         url: "/tags/hdlbits/"
       - name: Logic Design
         url: "/tags/logic-design/"
-      - name: Leetcode
+      - name: Leetcode(Java)
         url: "https://github.com/intervalrain/leetcode"
+      - name: Leetcode(C++)
+        url: "https://github.com/intervalrain/Cpp_practice/tree/main/leetcode"
       - name: CS
         url: "/posts/csindex"
   # home-info mode
